--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,14 @@
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-java</artifactId>
 			<version>6.10.4</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>io.cucumber</groupId>
+			<artifactId>cucumber-java</artifactId>
+			<version>6.10.4</version>
 			<scope>compile</scope>
 		</dependency>
-
 
 	</dependencies>
 
